# Practice

./: README.md  ai-erp.html
Ustem_group_crm/: main.py
Ustem_group_crm/backend/: README.md
Ustem_group_crm/backend/databases/: ustemgroup.sql
Ustem_group_crm/procurement_parser/: README.md  diag.txt  diagnose.py  pyproject.toml  quotation.xlsx  requirements.txt  tests.py  ~$quotation.xlsx
Ustem_group_crm/procurement_parser/examples/: demo.py  make_test_pdf.py  quotation_demo.xlsx  scanned_quotation.xlsx
Ustem_group_crm/procurement_parser/procurement_parser/: __init__.py  cli.py  company_matcher.py  excel_generator.py  models.py  pipeline.py  product_extractor.py  table_detector.py  text_utils.py
Ustem_group_crm/procurement_parser/sample_data/: product_database.csv  purchase_history.csv  supplier_price_lists.csv  warehouse_inventory.csv
