[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "procurement-parser"
version = "1.0.0"
description = "Layout-independent intelligent PDF procurement/equipment parser (RU+EN) with company-data matching and Excel quotation output"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pdfplumber>=0.11",
    "PyMuPDF>=1.23",
    "pytesseract>=0.3.10",
    "Pillow>=9.0",
    "rapidfuzz>=3.0",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
demo = ["reportlab>=4.0"]

[project.scripts]
procurement-parser = "procurement_parser.cli:main"

[tool.setuptools.packages.find]
include = ["procurement_parser*"]
